<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    >


    <TextView
        android:id="@+id/login_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_input_label"

        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="100dp"
        android:fontFamily="@font/orange"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:inputType="text"

        android:textAlignment="center"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_username_label"
        android:layout_marginTop="50dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="40sp"

        />

    <TextView
        android:id="@+id/login_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_input_label"
        android:layout_marginTop="50dp"

        android:textSize="30sp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_username_input"
        android:fontFamily="@font/orange"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_label"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="40sp"


         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_input_label"

        android:layout_marginTop="30dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_input"
        android:background="@drawable/form_child_bg_shape"
        android:textColor="@color/black"


        />

</androidx.constraintlayout.widget.ConstraintLayout>