<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    >


    <TextView
        android:id="@+id/register_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_input_label"

        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="50dp"

        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:inputType="textEmailAddress"

        android:textAlignment="center"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_label"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:textColor="@color/black"
        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/register_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_input_label"

        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_input"

        android:layout_marginTop="20dp"

        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:inputType="text"

        android:textAlignment="center"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_username_label"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:textColor="@color/black"
        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/register_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_input_label"
        android:layout_marginTop="20dp"

        android:textSize="30sp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_username_input"

        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_label"
        android:background="@drawable/edit_text_bg"
        android:textColor="@color/black"
        android:textSize="20sp"



        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register_submit_input_label"

        android:layout_marginTop="30dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_input"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/register_anchor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/register_with"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="120dp"
        android:id="@+id/form_icon_holder"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/twitter"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/facebook"
            android:layout_marginHorizontal="10dp"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/google"
            android:layout_marginHorizontal="10dp"
            />



    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_icon_holder"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:id="@+id/register_form_progress_bar"

        />

</androidx.constraintlayout.widget.ConstraintLayout>